--- a/abilityCalculator/ability.html
+++ b/abilityCalculator/ability.html
@@ -9,6 +9,12 @@
     <title>Calculator</title>
 </head>
 <body>
+    <nav class="navbar navbar-expand-xs navbar-dark bg-dark text-light">
+        <div class="container">
+            <h5>Navbar headline</h5>
+            <h6>dropdown for nav to other generators [NYI]</h6>
+        </div>
+    </nav>
     <div class="container mt-3 text-center ">
         <div class="col"><h1>Ability Calculator</h1></div>
         <div class="row">
