--- a/charGen/characterTrait.html
+++ b/charGen/characterTrait.html
@@ -9,8 +9,11 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark text-light">
-        <h5>Navbar headline</h5>
+    <nav class="navbar navbar-expand-xs navbar-dark bg-dark text-light">
+        <div class="container">
+            <h5>Navbar headline</h5>
+            <h6>dropdown for nav to other generators [NYI]</h6>
+        </div>
     </nav>
 
     <div class="container">
