--- a/spellbookGenerator/spellbook.html
+++ b/spellbookGenerator/spellbook.html
@@ -14,6 +14,12 @@
     </style>
 </head>
 <body>
+    <nav class="navbar navbar-expand-xs navbar-dark bg-dark text-light">
+        <div class="container">
+            <h5>Navbar headline</h5>
+            <h6>dropdown for nav to other generators [NYI]</h6>
+        </div>
+    </nav>
     <div class="container">
         <div class="d-flex flex-row">
             <h1>Spellbook Generator</h1>
