--- a/src/spellbookGenerator/index.html
+++ b/src/spellbookGenerator/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Spellbook Generator</title>
+    <link rel="stylesheet" href="spellbookGenerator/css/style.css">
+    <title>Generator</title>
 
 </head>
 
@@ -17,19 +17,19 @@
     <nav class="navbar navbar-expand-xs navbar-dark bg-dark text-light">
         <div class="container">
             <h5>Navbar headline</h5>
-            <h6>dropdown for nav to other generators [NYI]</h6>
         </div>
     </nav>
     <div class="container">
         <div class="d-flex flex-row">
-            <h1>Spellbook Generator</h1>
+            <h1>Generator</h1>
         </div>
         <div class="d-flex flex-row">
-            <div class="col-4 text-center px-0">
+            <div class="col-md-4 text-center px-0">
                 <ul class="list-group">
                     <li class="list-group-item m-0 p-0 border-0">
                         <select id="class-type" class="form-control">
-                            <option value="sorcerer/wizard">Wizard</option>
+                            <option value="sorcerer/wizard">Sorcerer and Wizard</option>
+                            <option value="cleric/oracle">Cleric and Oracle</option>
                             <option value="magus">Magus</option>
                         </select>
                         <div class="row mt-2">
@@ -38,36 +38,29 @@
                                 <input type="number" id="class-level" class="form-control" value="1" min="0" max="20">
                             </div>
                             <div class="col pl-1">
-                                <h6>Mod</h6>
+                                <h6>Ability mod</h6>
                                 <input type="number" id="ability-mod" class="form-control" min="0" value="0">
                             </div>
                         </div>
 
-                        <button id="generate-spells" class="btn btn-block btn-primary mt-2">Generate spellbook</button>
+                        <button id="generate-spells" class="btn btn-block btn-primary mt-2">Generate</button>
                     </li>
                 </ul>
                 <div>
                     <p>
-                        NYI:<br>Spell books for other classes, like the Magus
-                        <br><br>
+                        <br>
                         Future plans:<br>
                         Radical revision requiered, but a possibility of adding spells to spesific level with an
                         interface.
                     </p>
                 </div>
             </div>
-            <div class="col-8">
+            <div class="col-md-8">
                 <div id="print"></div>
             </div>
         </div>
 
-
         <!--
-            NB! the code as it is mixes in antipaladin spells into the paladin spell list
-            This can maybe be fixed with regular expressions aka. Regex. See into it if 
-            a paladin/antipaladin spell list becomes necessary.
-            
-            <option value="cleric/oracle">Cleric and Oracle</option>
             <option value="paladin">Paladin</option> 
             <option value="magus">Magus</option>
             <option value="summoner">Summoner</option>
@@ -84,11 +77,6 @@
             <option value="ranger">Ranger</option>
             <option value="inquisitor">Inquisitor</option>
             <option value="bard">Bard</option>
-            
-            paladin/antipaladin mixup:
-            check if paladin is at index 0, or if it is " paladin"
-            since spell_level fields that start with paladin do not have a space in the start,
-            and antipaladin has the word "paladin in it"
         -->
 
 
@@ -96,8 +84,7 @@
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
-    <script src="js/index.js"></script>
-
+    <script src="spellbookGenerator/js/index.js"></script>
 </body>
 
 </html>
