--- a/src/spellbookGenerator/index.html
+++ b/src/spellbookGenerator/index.html
@@ -41,6 +41,7 @@
                                     <select class="custom-select" id="class-type">
                                         <option value="sorcerer/wizard">Wizard</option>
                                         <option value="magus">Magus</option>
+                                        <option value="cleric/oracle">Cleric and Oracle</option>
                                     </select>
                                 </div>
                             </div>
