moved index.html

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
             <div>
                 Features to be implemented:
                 <ul>
-                    <li>City/Town stat gen. Click <a href="settlementGen/settlement.html">here</a> for a peak at the
+                    <li>City/Town stat gen. Click <a href="src/settlementGen/settlement.html">here</a> for a peak at
+                        the
                         WIP</li>
                     <li>DC table</li>
                     <li>Dice roller?</li>
@@ -76,7 +77,7 @@
                         same spellbook mechanic, like Magus or Sorcerer</p>
                 </div>
                 <div class="card-footer">
-                    <a class="card-link" href="spellbookGenerator/index.html" target="_blank">Spellbook generator</a>
+                    <a class="card-link" href="src/spellbookGenerator/index.html" target="_blank">Spellbook generator</a>
                 </div>
             </div>
 
@@ -88,7 +89,8 @@
                         different parameters</p>
                 </div>
                 <div class="card-footer">
-                    <a class="card-link" href="abilityCalculator/ability.html" target="_blank">Ability score calculator</a>
+                    <a class="card-link" href="src/abilityCalculator/ability.html" target="_blank">Ability score
+                        calculator</a>
                 </div>
             </div>
 
@@ -100,7 +102,8 @@
                         character traits</p>
                 </div>
                 <div class="card-footer">
-                    <a class="card-link" href="charGen/characterTrait.html" target="_blank">Character trait generator</a>
+                    <a class="card-link" href="src/charGen/characterTrait.html" target="_blank">Character trait
+                        generator</a>
                 </div>
             </div>
         </div>
