--- a/src/spellbookGenerator/index.html
+++ b/src/spellbookGenerator/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <link rel="stylesheet" href="spellbookGenerator/css/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Generator</title>
 
 </head>
@@ -99,7 +99,7 @@
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
-    <script src="spellbookGenerator/js/index.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
