--- a/index.html
+++ b/index.html
@@ -10,22 +10,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
-    <title>index</title>
+    <title>Pen &amp; Paper Tools</title>
 </head>
 
 <style>
     * {
         font-family: 'Lato', sans-serif;
-    }
-
-    body {
-        padding-top: 2vh;
-        /* Not sure about the padding. Trying it out for fun */
-        margin: 0;
-    }
-
-    .card-group {
-        padding: 0 15px 0 15px;
     }
 </style>
 
@@ -33,21 +23,18 @@
     <div class="container">
         <div class="landing">
             <div class="text-center">
-                <h1>Pen &amp; Paper tools</h1>
+                <h1>Pen &amp; Paper Tools</h1>
             </div>
 
             <div class="bg-light p-2">
                 <p> Welcome to this site. It contains several useful tools for anyone running tabletop roleplaying
                     games, like Dungeons &amp; Dragons, or Pathfinder, with more to come in the future.</p>
-                <p>My motives for creating these tools are twofold. Not only will I have the tools I want easily
-                    accessible when I need them, but I am will also learn a few things about how to build a web page.
-                    New features are added as i need and know how to make them.</p>
             </div>
 
             <div>
                 Features to be implemented:
                 <ul>
-                    <li>City/Town stat gen. Click <a href="src/settlementGen/settlement.html">here</a> for a peak at
+                    <li>City/Town stat gen. Click <a href="settlementGen/settlement.html">here</a> for a peak at
                         the
                         WIP</li>
                     <li>DC table</li>
@@ -71,38 +58,38 @@
         <div class="row card-group text-center">
             <div class="col-xs-12 col-md-4 card px-0">
                 <img class="card-img-top" src="" alt="">
-                <div class="card-text h5 strong">headline/image</div>
+                <div class="card-text h5 strong">Spellbook Generator</div>
                 <div class="card-body p-1">
-                    <p class="m-0">A wizard spellbook generator, with plans of expanding to other classes using the
-                        same spellbook mechanic, like Magus or Sorcerer</p>
+                    <p class="m-0">A generator for wizard/magus spellbooks. Other caster spell lists are available, but
+                        may not work properly. Besides, you should plan out a sorcerer better than with a generator!</p>
                 </div>
                 <div class="card-footer">
-                    <a class="card-link" href="src/spellbookGenerator/index.html" target="_blank">Spellbook generator</a>
+                    <a class="card-link" href="spellbookGenerator/index.html">Spellbook generator</a>
                 </div>
             </div>
 
             <div class="col-xs-12 col-md-4 card px-0">
                 <img class="card-img-top" src="" alt="">
-                <div class="card-text h5 strong">headline/image</div>
+                <div class="card-text h5 strong">Ability Score Calculator</div>
                 <div class="card-body p-1">
                     <p class="m-0">An ability score calculator with cost calculation for point buy, and generators with
                         different parameters</p>
                 </div>
                 <div class="card-footer">
-                    <a class="card-link" href="src/abilityCalculator/ability.html" target="_blank">Ability score
+                    <a class="card-link" href="abilityCalculator/ability.html">Ability score
                         calculator</a>
                 </div>
             </div>
 
             <div class="col-xs-12 col-md-4 card px-0">
                 <img class="card-img-top" src="" alt="">
-                <div class="card-text h5 strong">headline/image</div>
+                <div class="card-text h5 strong">Character Trait Generator</div>
                 <div class="card-body p-1">
                     <p class="m-0">A generator using the tables form the D&amp;D 5th edition DMG to generate NPC
                         character traits</p>
                 </div>
                 <div class="card-footer">
-                    <a class="card-link" href="src/charGen/characterTrait.html" target="_blank">Character trait
+                    <a class="card-link" href="charGen/characterTrait.html">Character trait
                         generator</a>
                 </div>
             </div>
