further functionality to buttons

--- a/spellbookGenerator/testLayout.html
+++ b/spellbookGenerator/testLayout.html
@@ -60,19 +60,13 @@
                                 </div>
                             </div>
                         </form>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. A quod deserunt, ducimus in sed
+                        aliquam dicta. Itaque temporibus cupiditate repellendus impedit reiciendis at aliquam numquam
+                        quibusdam nemo vel! Labore, vero magni nemo voluptatibus, distinctio quae unde eveniet
+                        consequuntur corrupti, laboriosam optio ex quos exercitationem dicta excepturi odit possimus
+                        eaque eligendi.
                     </div>
                     <div class="col-lg-8 col-md-7">
-
-                        <!-- Remember: jQuery is active! -->
-                        <!-- Start -->
-
-                        <div class="d-inline-flex align-items-center justify-content-between full-width mt-3">
-                            <div><h5 class="m-0">1st Level</h5></div>
-                            <div>
-                                <button class="unstyled-button"><i class="fas fa-plus-circle"></i> Add</button>
-                                <button class="unstyled-button ml-auto"><i class="fas fa-redo-alt" alt="reroll spell"></i> Reroll</button>
-                            </div>
-                        </div>
 
                         <!--
                             edit: <i class="fas fa-feather-alt"></i>
@@ -85,12 +79,28 @@
                             delete: <i class="fas fa-times-circle"></i>
                         -->
 
-                        <div class="card">
+                        <!-- Remember: jQuery is active! -->
+
+                        <!-- Start -->
+                        <div class="d-inline-flex align-items-center justify-content-between full-width mt-3">
+                            <div>
+                                <h5 class="m-0">1st Level</h5>
+                            </div>
+                            <div class="no-flex-shrink">
+                                <button class="unstyled-button"><i class="fas fa-plus-circle"></i> Add</button>
+                                <button class="unstyled-button ml-auto"><i class="fas fa-redo-alt" alt="reroll spell"></i>
+                                    Reroll</button>
+                            </div>
+                        </div>
+                        <div class="card mb-1">
                             <div class="card-header d-inline-flex p-1 justify-content-between align-items-center">
-                                <div class="spell-name"><h5 class="m-0">Lorem ipsum dolor sit amet </h5></div>
-                                <div class="button-group">
+                                <div class="spell-name">
+                                    <h5 class="m-0">Lorem ipsum dolor sit amet </h5>
+                                </div>
+                                <div class="no-flex-shrink">
                                     <!-- Prevent buttons from wrapping weirdly!-->
-                                    <button class="unstyled-button" data-toggle="collapse" data-target="#placeholder-n" alt="details"><i class="fas fa-info-circle"></i><br>Info</button>
+                                    <button class="unstyled-button" data-toggle="collapse" data-target="#placeholder-n"
+                                        alt="details"><i class="fas fa-info-circle"></i><br>Info</button>
                                     <button class="unstyled-button"><i class="fas fa-redo-alt" alt="reroll spell"></i><br>Redraw</button>
                                     <button class="unstyled-button" alt="discard spell"><i class="fas fa-times-circle"></i><br>Discard</button>
                                 </div>
@@ -98,13 +108,13 @@
                             <div id="placeholder-n" class="collapse">
                                 <div class="card-body p-1">
                                     <div class="spell-description">
-                                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo sapiente
-                                        delectus quam, iure quibusdam odit obcaecati rerum voluptatibus fugiat omnis.
+                                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur ratione
+                                        aspernatur odio rem fuga nihil saepe? Excepturi iure harum corporis cumque
+                                        tempora, incidunt maxime fugit iusto dolor ipsam, placeat voluptas assumenda
+                                        voluptatem fuga? Saepe fugit quod eum, molestias quasi ex.
                                     </div>
                                 </div>
                             </div>
-
-
                         </div>
                         <!-- Stop -->
 
