--- a/spellbookGenerator/index.html
+++ b/spellbookGenerator/index.html
@@ -95,8 +95,11 @@
                         </div>
 
                         <div class="row">
-                            <div id="spellbook-information" class="">
 
+                            <div class="col">
+                                <div id="spellbook-information">
+
+                                </div>
                             </div>
                         </div>
                     </div>
